--- a/AmatsukazeGUI/Views/MainWindow.xaml
+++ b/AmatsukazeGUI/Views/MainWindow.xaml
@@ -118,7 +118,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="200"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
