エンコード中項目の背景色変更

--- a/AmatsukazeGUI/Views/QueuePanel.xaml
+++ b/AmatsukazeGUI/Views/QueuePanel.xaml
@@ -873,7 +873,7 @@
                                 <Setter Property="Background" Value="#A0FFFF"/>
                             </DataTrigger>
                             <DataTrigger Binding="{Binding IsEncoding}" Value="True">
-                                <Setter Property="Background" Value="Green"/>
+                                <Setter Property="Background" Value="#77dd77"/>
                             </DataTrigger>
                             <DataTrigger Binding="{Binding IsError}" Value="True">
                                 <Setter Property="Background" Value="Red"/>
